# summer-camp-grants

./: Anchor.toml  LICENSE  README.md  env  package.json
api/: createGrant.ts  createSubmission.ts  getAllGrants.ts  getAllSubmissionsForGrant.ts  getGrant.ts  getPaymentsForGrant.ts  getSubmission.ts  paySubmitter.ts
app/: .eslintrc.js  .gitignore  .npmrc  env.example.ts  envTypes.ts  next.config.js  package.json  sentry.client.config.js  sentry.properties  sentry.server.config.js  tsconfig.eslint.json  tsconfig.json
app/src/: creatorWhitelist.ts  global.d.ts
app/src/__generated__/: _env.ts  ahoy_grants.ts  spl_token_faucet.ts
app/src/components/: AddGrantSubmission.tsx  Airdrop.tsx  CurrentWalletBalanceCard.tsx  Footer.tsx  GrantCard.tsx  ImageDropzone.tsx  Layout.tsx  PageHead.tsx  SolanaWalletProvider.tsx  Spacers.tsx  SubmissionCard.tsx
app/src/constants/: environment.ts  urls.ts
app/src/hooks/: useConnectedWalletBalance.tsx  useGrantWithSubmissions.ts  useHeapAnalytics.tsx
app/src/styles/: global.css  (+1 more)
contract/: .eslintrc.js  Anchor.toml  README.md  env  faucet_mint_Gh9ZwEmdLJ8DscKNTkTqPbNwLNNBjuSzaG9Vp2KGtKJr.json  package.json  spl_token_faucet-keypair.json  spl_token_faucet.json  tsconfig.eslint.json  tsconfig.json
contract/programs/ahoy-grants/: Cargo.toml
contract/programs/ahoy-grants/src/: lib.rs
contract/scripts/: anchor-pinned.sh  init-faucet.ts
contract/tests/: ahoy-grants.ts
contract/types/: spl_token_faucet.ts
programs/ahoy-grants/: Cargo.toml
programs/ahoy-grants/src/: consts.rs  lib.rs
scripts/: replace-solana-program-id.sh
(+56 files in other folders)
